--- a/assets/scripts/menus/Menu.scss
+++ b/assets/scripts/menus/Menu.scss
@@ -34,24 +34,29 @@ $menu-box-shadow: $medium-box-shadow;
     pointer-events: auto;
   }
 
-  > a {
-    display: block;
-    position: relative;
-    padding: 0.75em 2.5em;
-    border-bottom: 1px solid $ui-colour;
-    text-decoration: none;
-    color: black;
+  > ul {
+    > li {
+      > a {
+        text-decoration: none;
+        color: black;
+        padding: 0.75em 2.5em;
+        display: block;
+        position: relative;
+      }
 
-    &:last-child {
-      border-bottom: 0;
-    }
+      border-bottom: 1px solid $ui-colour;
 
-    &:hover {
-      background: fade-out($ui-colour, 0.5);
-    }
+      &:last-child {
+        border-bottom: 0;
+      }
 
-    &:active {
-      background: fade-out($ui-colour, 0.3);
+      &:hover {
+        background: fade-out($ui-colour, 0.5);
+      }
+
+      &:active {
+        background: fade-out($ui-colour, 0.3);
+      }
     }
   }
 
