--- a/assets/scripts/menus/Menu.scss
+++ b/assets/scripts/menus/Menu.scss
@@ -34,29 +34,35 @@ $menu-box-shadow: $medium-box-shadow;
     pointer-events: auto;
   }
 
-  > ul {
-    > li {
-      > a {
-        text-decoration: none;
-        color: black;
-        padding: 0.75em 2.5em;
-        display: block;
-        position: relative;
-      }
+  .menu-list-item {
+    > a {
+      text-decoration: none;
+      color: black;
+      display: block;
+      position: relative;
+    }
+  }
 
-      border-bottom: 1px solid $ui-colour;
+  .menu-item-clickable,
+  .menu-item-plain {
+    > a {
+      padding: 0.75em 2.5em;
+    }
+  }
 
-      &:last-child {
-        border-bottom: 0;
-      }
+  .menu-item-clickable {
+    border-bottom: 1px solid $ui-colour;
 
-      &:hover {
-        background: fade-out($ui-colour, 0.5);
-      }
+    &:last-child {
+      border-bottom: 0;
+    }
 
-      &:active {
-        background: fade-out($ui-colour, 0.3);
-      }
+    &:hover {
+      background: fade-out($ui-colour, 0.5);
+    }
+
+    &:active {
+      background: fade-out($ui-colour, 0.3);
     }
   }
 
